--- a/init_xgb_bag.ipynb
+++ b/init_xgb_bag.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -268,7 +268,31 @@
       "22\n",
       "23\n",
       "24\n",
-      "25\n"
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n"
      ]
     }
    ],
@@ -284,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -292,7 +316,7 @@
    "source": [
     "sample = pd.read_csv('data/sample_submission.csv', index_col='ID')\n",
     "sample.TARGET = np.array(preds_all).mean(axis=0)\n",
-    "sample.to_csv('submission/init_xgb.csv', index_label='ID')"
+    "sample.to_csv('submission/init_xgb_bag.csv', index_label='ID')"
    ]
   }
  ],
