--- a/python_cheat.ipynb
+++ b/python_cheat.ipynb
@@ -225,16 +225,7 @@
     "\n",
     "    train_preds = np.power(train_preds, 1./index)\n",
     "    test_preds = np.power(test_preds, 1./index)\n",
-    "    #print('Average Log Loss:', log_loss(train.TARGET.values, train_preds))\n",
-    "    #print('Average ROC:', roc_auc_score(train.TARGET.values, train_preds))\n",
-    "    #submission = pd.DataFrame({\"ID\": train.ID,\n",
-    "    #                           \"TARGET\": train.TARGET,\n",
-    "    #                           \"PREDICTION\": train_preds})\n",
-    "    #\n",
-    "    #submission.to_csv(\"simplexgbtrain.csv\", index=False)\n",
-    "    #submission = pd.DataFrame({\"ID\": test.ID, \"TARGET\": test_preds})\n",
-    "    #submission.to_csv(\"simplexgbtest.csv\", index=False)\n",
-    "    #print('Finish')\n",
+    "    \n",
     "    res.append(roc_auc_score(test.TARGET.values, test_preds))\n",
     "print('ROC = {:.6f} +/- {:.6f}'.format(np.mean(res), np.std(res)))\n"
    ]
@@ -247,10 +238,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Started!\n"
+      "  0%|          | 0/10 [00:00<?, ?it/s]/home/libfun/vrt/lib/python3.4/site-packages/ipykernel/__main__.py:65: FutureWarning: using '-' to provide set differences with Indexes is deprecated, use .difference()\n",
+      " 40%|████      | 4/10 [32:43<48:44, 487.44s/it]"
      ]
     }
    ],
@@ -265,172 +257,137 @@
     "from sklearn.preprocessing import normalize, StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "from tqdm import *\n",
-    "from libtelepot import sendMessage\n",
     "\n",
-    "print('Started!')\n",
-    "train = pd.read_csv('data/train.csv')\n",
-    "test = pd.read_csv('data/test.csv')\n",
-    "features = train.columns[1:-1]\n",
-    "train.insert(1, 'SumZeros', (train[features] == 0).astype(int).sum(axis=1))\n",
-    "test.insert(1, 'SumZeros', (test[features] == 0).astype(int).sum(axis=1))\n",
+    "#print('Started!')\n",
+    "gtrain = pd.read_csv('data/train.csv')\n",
+    "gtest = pd.read_csv('data/test.csv')\n",
     "\n",
-    "remove = []\n",
-    "c = train.columns\n",
-    "for i in range(len(c)-1):\n",
-    "    v = train[c[i]].values\n",
-    "    for j in range(i+1, len(c)):\n",
-    "        if np.array_equal(v, train[c[j]].values):\n",
-    "            remove.append(c[j])\n",
-    "\n",
-    "train.drop(remove, axis=1, inplace=True)\n",
-    "test.drop(remove, axis=1, inplace=True)\n",
-    "\n",
-    "remove = []\n",
-    "for col in train.columns:\n",
-    "    if train[col].std() == 0:\n",
-    "        remove.append(col)\n",
-    "\n",
-    "train.drop(remove, axis=1, inplace=True)\n",
-    "test.drop(remove, axis=1, inplace=True)\n",
-    "features = train.columns[1:-1]\n",
-    "pca = PCA(n_components=5)\n",
-    "sc = StandardScaler()\n",
-    "trainsc = sc.fit_transform(train[features])\n",
-    "testsc = sc.transform(test[features])\n",
-    "x_train_projected = pca.fit_transform(trainsc)\n",
-    "x_test_projected = pca.transform(testsc)\n",
-    "train.insert(1, 'PCAOne', x_train_projected[:, 0])\n",
-    "train.insert(1, 'PCATwo', x_train_projected[:, 1])\n",
-    "train.insert(1, 'PCAThree', x_train_projected[:, 2])\n",
-    "train.insert(1, 'PCAFour', x_train_projected[:, 3])\n",
-    "train.insert(1, 'PCAFive', x_train_projected[:, 4])\n",
-    "test.insert(1, 'PCAOne', x_test_projected[:, 0])\n",
-    "test.insert(1, 'PCATwo', x_test_projected[:, 1])\n",
-    "test.insert(1, 'PCAThree', x_test_projected[:, 2])\n",
-    "test.insert(1, 'PCAFour', x_test_projected[:, 3])\n",
-    "test.insert(1, 'PCAFive', x_test_projected[:, 4])\n",
-    "tokeep = ['num_var39_0',  # 0.00031104199066874026\n",
-    "          'ind_var13',  # 0.00031104199066874026\n",
-    "          'num_op_var41_comer_ult3',  # 0.00031104199066874026\n",
-    "          'num_var43_recib_ult1',  # 0.00031104199066874026\n",
-    "          'imp_op_var41_comer_ult3',  # 0.00031104199066874026\n",
-    "          'num_var8',  # 0.00031104199066874026\n",
-    "          'num_var42',  # 0.00031104199066874026\n",
-    "          'num_var30',  # 0.00031104199066874026\n",
-    "          'saldo_var8',  # 0.00031104199066874026\n",
-    "          'num_op_var39_efect_ult3',  # 0.00031104199066874026\n",
-    "          'num_op_var39_comer_ult3',  # 0.00031104199066874026\n",
-    "          'num_var41_0',  # 0.0006220839813374805\n",
-    "          'num_op_var39_ult3',  # 0.0006220839813374805\n",
-    "          'saldo_var13',  # 0.0009331259720062209\n",
-    "          'num_var30_0',  # 0.0009331259720062209\n",
-    "          'ind_var37_cte',  # 0.0009331259720062209\n",
-    "          'ind_var39_0',  # 0.001244167962674961\n",
-    "          'num_var5',  # 0.0015552099533437014\n",
-    "          'ind_var10_ult1',  # 0.0015552099533437014\n",
-    "          'num_op_var39_hace2',  # 0.0018662519440124418\n",
-    "          'num_var22_hace2',  # 0.0018662519440124418\n",
-    "          'num_var35',  # 0.0018662519440124418\n",
-    "          'ind_var30',  # 0.0018662519440124418\n",
-    "          'num_med_var22_ult3',  # 0.002177293934681182\n",
-    "          'imp_op_var41_efect_ult1',  # 0.002488335925349922\n",
-    "          'var36',  # 0.0027993779160186624\n",
-    "          'num_med_var45_ult3',  # 0.003110419906687403\n",
-    "          'imp_op_var39_ult1',  # 0.0037325038880248835\n",
-    "          'imp_op_var39_comer_ult3',  # 0.0037325038880248835\n",
-    "          'imp_trans_var37_ult1',  # 0.004043545878693624\n",
-    "          'num_var5_0',  # 0.004043545878693624\n",
-    "          'num_var45_ult1',  # 0.004665629860031105\n",
-    "          'ind_var41_0',  # 0.0052877138413685845\n",
-    "          'imp_op_var41_ult1',  # 0.0052877138413685845\n",
-    "          'num_var8_0',  # 0.005598755832037325\n",
-    "          'imp_op_var41_efect_ult3',  # 0.007153965785381027\n",
-    "          'num_op_var41_ult3',  # 0.007153965785381027\n",
-    "          'num_var22_hace3',  # 0.008087091757387248\n",
-    "          'num_var4',  # 0.008087091757387248\n",
-    "          'imp_op_var39_comer_ult1',  # 0.008398133748055987\n",
-    "          'num_var45_ult3',  # 0.008709175738724729\n",
-    "          'ind_var5',  # 0.009953343701399688\n",
-    "          'imp_op_var39_efect_ult3',  # 0.009953343701399688\n",
-    "          'num_meses_var5_ult3',  # 0.009953343701399688\n",
-    "          'saldo_var42',  # 0.01181959564541213\n",
-    "          'imp_op_var39_efect_ult1',  # 0.013374805598755831\n",
-    "          'PCATwo',  # 0.013996889580093312\n",
-    "          'num_var45_hace2',  # 0.014618973561430793\n",
-    "          'num_var22_ult1',  # 0.017107309486780714\n",
-    "          'saldo_medio_var5_ult1',  # 0.017418351477449457\n",
-    "          'PCAOne',  # 0.018040435458786936\n",
-    "          'saldo_var5',  # 0.0208398133748056\n",
-    "          'ind_var8_0',  # 0.021150855365474338\n",
-    "          'ind_var5_0',  # 0.02177293934681182\n",
-    "          'num_meses_var39_vig_ult3',  # 0.024572317262830483\n",
-    "          'saldo_medio_var5_ult3',  # 0.024883359253499222\n",
-    "          'num_var45_hace3',  # 0.026749611197511663\n",
-    "          'num_var22_ult3',  # 0.03452566096423017\n",
-    "          'saldo_medio_var5_hace3',  # 0.04074650077760498\n",
-    "          'saldo_medio_var5_hace2',  # 0.04292379471228616\n",
-    "          'SumZeros',  # 0.04696734059097978\n",
-    "          'saldo_var30',  # 0.09611197511664074\n",
-    "          'var38',  # 0.1390357698289269\n",
-    "          'var15',  # 0.20964230171073095\n",
-    "          'PCAThree',\n",
-    "          'PCAFour',\n",
-    "          'PCAFive']\n",
-    "features = train.columns[1:-1]\n",
-    "todrop = list(set(tokeep).difference(set(features)))\n",
-    "train.drop(todrop, inplace=True, axis=1)\n",
-    "test.drop(todrop, inplace=True, axis=1)\n",
-    "features = train.columns[1:-1]\n",
-    "split = 10\n",
-    "skf = StratifiedKFold(train.TARGET.values,\n",
-    "                      n_folds=split,\n",
+    "gskf = StratifiedKFold(train.TARGET.values,\n",
+    "                      n_folds=10,\n",
     "                      shuffle=False,\n",
     "                      random_state=42)\n",
     "\n",
-    "params = {\"objective\": \"binary:logistic\",\n",
-    "          \"eta\": 0.05,\n",
-    "          \"subsample\": 0.8,\n",
-    "          \"colsample_bytree\": 0.7,\n",
-    "          \"silent\": 1,\n",
-    "          \"max_depth\": 5,\n",
-    "          \"min_child_weight\": 1,\n",
-    "          \"eval_metric\": \"auc\"\n",
-    "         }\n",
-    "\n",
-    "dtest = xgb.DMatrix(test[features])\n",
-    "target = train.TARGET.values.copy()\n",
-    "\n",
-    "preds_all = list()\n",
-    "seeds = 10\n",
-    "\n",
-    "for seed in range(seeds):\n",
-    "    params['seed'] = seed\n",
+    "res = list()\n",
+    "for gtrain_index, gtest_index in tqdm(gskf):\n",
+    "    train, test = gtrain.iloc[gtrain_index].copy(), gtrain.iloc[gtest_index].copy()\n",
     "    \n",
-    "    preds_in = list()\n",
-    "    kek = 1\n",
+    "    features = gtrain.columns[1:-1]\n",
+    "    train.insert(1, 'SumZeros', (train[features] == 0).astype(int).sum(axis=1))\n",
+    "    test.insert(1, 'SumZeros', (test[features] == 0).astype(int).sum(axis=1))\n",
+    "\n",
+    "    remove = []\n",
+    "    c = train.columns\n",
+    "    for i in range(len(c)-1):\n",
+    "        v = train[c[i]].values\n",
+    "        for j in range(i+1, len(c)):\n",
+    "            if np.array_equal(v, train[c[j]].values):\n",
+    "                remove.append(c[j])\n",
+    "\n",
+    "    train.drop(remove, axis=1, inplace=True)\n",
+    "    test.drop(remove, axis=1, inplace=True)\n",
+    "\n",
+    "    remove = []\n",
+    "    for col in train.columns:\n",
+    "        if train[col].std() == 0:\n",
+    "            remove.append(col)\n",
+    "\n",
+    "    train.drop(remove, axis=1, inplace=True)\n",
+    "    test.drop(remove, axis=1, inplace=True)\n",
+    "    features = train.columns[1:-1]\n",
+    "    pca = PCA(n_components=2)\n",
+    "    sc = StandardScaler()\n",
+    "    trainsc = sc.fit_transform(train[features])\n",
+    "    testsc = sc.transform(test[features])\n",
+    "    x_train_projected = pca.fit_transform(trainsc)\n",
+    "    x_test_projected = pca.transform(testsc)\n",
+    "    train.insert(1, 'PCAOne', x_train_projected[:, 0])\n",
+    "    train.insert(1, 'PCATwo', x_train_projected[:, 1])\n",
+    "    test.insert(1, 'PCAOne', x_test_projected[:, 0])\n",
+    "    test.insert(1, 'PCATwo', x_test_projected[:, 1])\n",
+    "\n",
+    "    features = train.columns[1:-1]\n",
+    "    features = features - ['delta_imp_aport_var13_1y3', 'delta_imp_reemb_var33_1y3', \n",
+    "                           'delta_imp_venta_var44_1y3', 'ind_var20', 'ind_var18_0', \n",
+    "                           'delta_imp_amort_var34_1y3', 'delta_imp_reemb_var13_1y3', \n",
+    "                           'delta_imp_aport_var17_1y3', 'ind_var20_0', 'num_meses_var13_medio_ult3', \n",
+    "                           'delta_imp_trasp_var33_out_1y3', 'delta_imp_amort_var18_1y3', \n",
+    "                           'ind_var13_medio_0', 'ind_var6', 'delta_imp_aport_var33_1y3']\n",
+    "    #train.drop(todrop, inplace=True, axis=1)\n",
+    "    #test.drop(todrop, inplace=True, axis=1)\n",
+    "    #features = train.columns[1:-1]\n",
+    "    split = 10\n",
+    "    skf = StratifiedKFold(train.TARGET.values,\n",
+    "                          n_folds=split,\n",
+    "                          shuffle=False,\n",
+    "                          random_state=42)\n",
+    "\n",
+    "    train_preds = None\n",
+    "    test_preds = None\n",
+    "    visibletrain = blindtrain = train\n",
+    "    index = 0\n",
+    "    #print('Change num_rounds to 350')\n",
+    "    num_rounds = 350\n",
+    "    params = {}\n",
+    "    params[\"objective\"] = \"binary:logistic\"\n",
+    "    params[\"eta\"] = 0.03\n",
+    "    params[\"subsample\"] = 0.8\n",
+    "    params[\"colsample_bytree\"] = 0.7\n",
+    "    params[\"silent\"] = 1\n",
+    "    params[\"max_depth\"] = 5\n",
+    "    params[\"min_child_weight\"] = 1\n",
+    "    params[\"eval_metric\"] = \"auc\"\n",
     "    for train_index, test_index in skf:\n",
-    "        sendMessage('Fold {:}'.format(kek))\n",
-    "        X_train, X_test = train.iloc[train_index], train.iloc[test_index]\n",
-    "        y_train, y_test = target[train_index], target[test_index]\n",
+    "        #print('Fold:', index)\n",
+    "        visibletrain = train.iloc[train_index]\n",
+    "        blindtrain = train.iloc[test_index]\n",
+    "        dvisibletrain = \\\n",
+    "            xgb.DMatrix(csr_matrix(visibletrain[features]),\n",
+    "                        visibletrain.TARGET.values,\n",
+    "                        silent=True)\n",
+    "        dblindtrain = \\\n",
+    "            xgb.DMatrix(csr_matrix(blindtrain[features]),\n",
+    "                        blindtrain.TARGET.values,\n",
+    "                        silent=True)\n",
+    "        watchlist = [(dblindtrain, 'eval'), (dvisibletrain, 'train')]\n",
+    "        clf = xgb.train(params, dvisibletrain, num_rounds,\n",
+    "                        evals=watchlist, early_stopping_rounds=50,\n",
+    "                        verbose_eval=False)\n",
     "\n",
-    "        dtrain = xgb.DMatrix(X_train[features], y_train)\n",
-    "        dval = xgb.DMatrix(X_test[features], y_test)\n",
+    "        blind_preds = clf.predict(dblindtrain)\n",
+    "        #print('Blind Log Loss:', log_loss(blindtrain.TARGET.values,\n",
+    "        #                                  blind_preds))\n",
+    "        #print('Blind ROC:', roc_auc_score(blindtrain.TARGET.values,\n",
+    "        #                                  blind_preds))\n",
+    "        index = index+1\n",
+    "        del visibletrain\n",
+    "        del blindtrain\n",
+    "        del dvisibletrain\n",
+    "        del dblindtrain\n",
+    "        gc.collect()\n",
+    "        dfulltrain = \\\n",
+    "            xgb.DMatrix(csr_matrix(train[features]),\n",
+    "                        train.TARGET.values,\n",
+    "                        silent=True)\n",
+    "        dfulltest = \\\n",
+    "            xgb.DMatrix(csr_matrix(test[features]),\n",
+    "                        silent=True)\n",
+    "        if(train_preds is None):\n",
+    "            train_preds = clf.predict(dfulltrain)\n",
+    "            test_preds = clf.predict(dfulltest)\n",
+    "        else:\n",
+    "            train_preds *= clf.predict(dfulltrain)\n",
+    "            test_preds *= clf.predict(dfulltest)\n",
+    "        del dfulltrain\n",
+    "        del dfulltest\n",
+    "        del clf\n",
+    "        gc.collect()\n",
     "\n",
-    "        watchlist = ((dtrain, 'train'), (dval, 'val'))\n",
-    "\n",
-    "        gbm = xgb.train(params, dtrain, num_boost_round=3000, evals=watchlist, maximize=True,\n",
-    "                        early_stopping_rounds=300, verbose_eval=False)\n",
-    "\n",
-    "        preds_x = gbm.predict(dtest, ntree_limit=gbm.best_ntree_limit)\n",
-    "        preds_in.append(preds_x)\n",
-    "        kek += 1\n",
-    "    preds_all.append(np.array(preds_in).mean(axis=0))\n",
-    "    sendMessage('Done seed {:}'.format(seed))\n",
+    "    train_preds = np.power(train_preds, 1./index)\n",
+    "    test_preds = np.power(test_preds, 1./index)\n",
     "    \n",
-    "    \n",
-    "submission = pd.DataFrame({\"ID\": test.ID, \"TARGET\": np.array(preds_all).mean(axis=0)})\n",
-    "submission.to_csv(\"submission/secondxgbtest.csv\", index=False)\n",
-    "print('Finish')"
+    "    res.append(roc_auc_score(test.TARGET.values, test_preds))\n",
+    "print('ROC = {:.6f} +/- {:.6f}'.format(np.mean(res), np.std(res)))\n",
+    "\n"
    ]
   },
   {
@@ -440,7 +397,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sendMessage('ROC = {:.6f} +/- {:.6f}'.format(np.mean(res), np.std(res)))"
+   ]
   }
  ],
  "metadata": {
